@@ -3,6 +3,7 @@ package com.team9oogling.codyus.domain.admin.service;
 import com.team9oogling.codyus.domain.admin.dto.AllUserPageResponseDto;
 import com.team9oogling.codyus.domain.admin.dto.AllUserResponseDto;
 import com.team9oogling.codyus.domain.admin.dto.CategoryRequestDto;
+import com.team9oogling.codyus.domain.admin.dto.PostPageResponseDto;
 import com.team9oogling.codyus.domain.post.dto.PostResponseDto;
 import com.team9oogling.codyus.domain.post.entity.Category;
 import com.team9oogling.codyus.domain.post.entity.Post;
@@ -23,7 +24,6 @@ import org.springframework.stereotype.Service;
 import java.time.LocalDate;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -54,12 +54,16 @@ public class AdminService {
         Page<User> userPage = userRepository.findAll(pageable);
 
         List<AllUserResponseDto> userResponseDtoList = userPage.stream()
-                .map(AllUserResponseDto::new).toList();
+                .map(AllUserResponseDto::new)
+                .toList();
 
-        return new AllUserPageResponseDto(userResponseDtoList,userPage.getTotalPages(),userPage.getSize());
+        return new AllUserPageResponseDto(userResponseDtoList,
+                userPage.getTotalPages(),
+                userPage.getSize(),
+                userPage.getTotalElements());
     }
 
-    // 관리자 권한으로 유저 게시물 삭제
+    // 관리자 권한 사용자 게시물 삭제
     @Transactional
     public void deletePostByUserAndPostId(Long userId, Long postId) {
         Optional<Post> postOptional = postRepository.findById(postId);
@@ -78,33 +82,40 @@ public class AdminService {
             throw new CustomException(StatusCode.NOT_FOUND_POST);
         }
     }
-//    // 사용자별 게시물 조회
-//    public List<AllUserPageResponseDto> getAllPostsByUser(Long userId) {
-//
-//        List<Post> posts = postRepository.findByUserId(userId);
-//
-//        return posts.stream()
-//                .map(post -> new AllUserPageResponseDto(
-//                        post.getId(),
-//                        post.getTitle(),
-//                        post.getContent()))
-//                .collect(Collectors.toList());
-//    }
+
+    // 사용자별 게시물 조회
+    public PostPageResponseDto getAllPostsByUser(Long userId, int page) {
+
+        Pageable pageable = PageRequest.of(page, 10);
+
+        Page<Post> postPage = postRepository.findAllByUserId(userId, pageable);
+        List<PostResponseDto> postResponseDtoList = postPage.stream()
+                .map(PostResponseDto::new)
+                .toList();
+
+        return new PostPageResponseDto(postResponseDtoList,
+                postPage.getTotalPages(),
+                postPage.getTotalElements(),
+                postPage.getSize());
+    }
 
     // 일자별 거래 완료 조회
-    public List<PostResponseDto> getPostsByStatus(LocalDate completedDate) {
+    public PostPageResponseDto getPostsByStatus(LocalDate completedDate, int page) {
+
+        Pageable pageable = PageRequest.of(page, 10);
 
         if (completedDate == null) {
             throw new CustomException(StatusCode.NOT_NULL_COMPLETED_DATE);
         }
 
-        List<Post> posts = postRepository.findByStatusAndCompletedDate(PostStatus.COMPLETE, completedDate);
-
-        if (posts == null) {
-            throw new CustomException(StatusCode.NOT_FOUND_POST);
-        }
-        return posts.stream()
+        Page<Post> postPage = postRepository.findAllByStatusAndCompletedDate(PostStatus.COMPLETE, completedDate, pageable);
+        List<PostResponseDto> postResponseDtoList = postPage.stream()
                 .map(PostResponseDto::new)
-                .collect(Collectors.toList());
+                .toList();
+
+        return new PostPageResponseDto(postResponseDtoList,
+                postPage.getTotalPages(),
+                postPage.getTotalElements(),
+                postPage.getSize());
     }
 }
